Support specifying multiple templates (#22139)
Problem: We introduced the ability to shorten the rank eval request by using a
template in #20231. When playing with the API it turned out that there might be
use cases where - e.g. due to various heuristics - folks might want to translate
the original user query into more than just one type of Elasticsearch query.

Solution: Give each template an id that can later be referenced in the
actual requests.

Closes #21257

--- a/docs/reference/search/rank-eval.asciidoc
+++ b/docs/reference/search/rank-eval.asciidoc
@@ -80,12 +80,14 @@ GET /twitter/tweet/_rank_eval
 --------------------------------
 GET /twitter/tweet/_rank_eval
 {
-  "template": {
-        "inline": {
-            "query": {
-                "match": {
-                    "{{field}}": {
-                        "query": "{{query_string}}"}}}}},  <1>
+  "templates": [{
+        "id": "match_query",
+        "template": {
+            "inline": {
+                "query": {
+                    "match": {
+                        "{{field}}": {
+                            "query": "{{query_string}}"}}}}}}],  <1>
   "requests": [
   {
       "id": "JFK query",
@@ -105,7 +107,8 @@ GET /twitter/tweet/_rank_eval
       "params": {
         "query_string": "JFK",                          <2>
         "field": "opening_text"                         <2>
-      }
+      },
+      "template_id": "match_query"
     }],
     "metric": {
       "precision": {
