Make maximum number of parallel search requests configurable. (#22192)
Problem: So far all rank eval requests are being executed in parallel. If there
are more than the search thread pool can handle, or if there are other search
requests executed in parallel rank eval can fail.

Solution: Make number of max_concurrent_searches configurable.

Name of configuration parameter is analogous to msearch. Default
max_concurrent_searches set to 10: Rank_eval isn't particularly time critical so
trying to avoid being more clever than probably needed here. Can set this value
through the API to a higher value anytime.

Fixes #21403

--- a/docs/reference/search/rank-eval.asciidoc
+++ b/docs/reference/search/rank-eval.asciidoc
@@ -57,7 +57,8 @@ GET /twitter/tweet/_rank_eval
     }],
     "metric": {                                         <9>
       "reciprocal_rank": {}
-   }
+   },
+   "max_concurrent_searches": 10                         <10>
 }
 ------------------------------
 // CONSOLE
@@ -72,6 +73,8 @@ GET /twitter/tweet/_rank_eval
 <7> The index where the rated document lives.
 <8> For a verbose response, specify which properties of a search hit should be returned in addition to index/type/id.
 <9> A metric to use for evaluation. See below for a list.
+<10> Maximum number of search requests to execute in parallel. Set to 10 by
+default.
 
 
 == Template based ranking evaluation
