Fix x-pack readme to reflect project name and dev-setup changes (elastic/elasticsearch#4402)
* Update readme to reflect new dev setup directory structure.

* Fix typo in elasticsearch-extra path in readme

* Update gradle exception for x-pack directory structure.

* Make directory path where x-pack must be checked out explicit in the gradle exception

Original commit: elastic/x-pack-elasticsearch@91f1d04542a32bc6886fe5c6595c74cac6ad586b

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,4 @@
-= Elasticsearch X Plugins
+= Elasticsearch X Pack
 
 A set of Elastic's commercial plugins:
 
@@ -8,8 +8,11 @@ A set of Elastic's commercial plugins:
 - Monitoring
 
 = Setup
-You must checkout x-plugins and elasticsearch in the same directory as siblings. This
-elasticsearch checkout will be used when building x-plugins.
+You must checkout x-pack and elasticsearch with a specific directory structure. The
+elasticsearch checkout will be used when building x-pack. The structure is:
+
+- /path/to/elastic/elasticsearch
+- /path/to/elastic/elasticsearch-extra/x-pack
 
 = Build
 
